// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`can load libraries from within a callback 1`] = `
{
  "ok": {
    "assembly": "@scope/jsii-calc-base-of-base",
    "types": "*redacted*",
  },
}
`;

exports[`can load libraries from within a callback 2`] = `
{
  "ok": {
    "assembly": "@scope/jsii-calc-base",
    "types": "*redacted*",
  },
}
`;

exports[`can load libraries from within a callback 3`] = `
{
  "ok": {
    "assembly": "@scope/jsii-calc-lib",
    "types": "*redacted*",
  },
}
`;

exports[`can load libraries from within a callback 4`] = `
{
  "ok": {
    "$jsii.byref": "Object@10000",
    "$jsii.interfaces": [
      "@scope/jsii-calc-lib.IFriendly",
    ],
  },
}
`;

exports[`can load libraries from within a callback 5`] = `
{
  "callback": {
    "cbid": "jsii::callback::20000",
    "cookie": undefined,
    "invoke": {
      "args": [],
      "method": "hello",
      "objref": {
        "$jsii.byref": "Object@10000",
        "$jsii.interfaces": [
          "@scope/jsii-calc-lib.IFriendly",
        ],
      },
    },
  },
}
`;

exports[`can load libraries from within a callback 6`] = `
{
  "ok": {
    "assembly": "jsii-calc",
    "types": "*redacted*",
  },
}
`;

exports[`can load libraries from within a callback 7`] = `
{
  "ok": {
    "result": "SUCCESS!",
  },
}
`;
